<resources>
    <string name="app_name">eluo\nintranet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 엑션바-->
    <string name="action_login">LOGIN</string>
    <string name="action_logout">LOGOUT</string>
    <string name="action_home">HOME</string>
    <string name="action_member">직원검색</string>
    <string name="action_notice">공지사항</string>
    <string name="action_meeting">회의실예약현황</string>
    <string name="action_outside">외근조회</string>
    <string name="action_leave">내 휴가조회</string>
    <string name="action_map">회사위치</string>
    <string name="action_exit">종료</string>
    <string name="action_myeluo">MY ELUO</string>
    <string name="action_meeting_reg">회의실예약</string>
    <!-- 오버플러-->
    <string name="rep_mail">master@eluocnc.com</string>
    <string name="company_name">Android Studio Dev App</string>
    <string name="app_info">앱 정보</string>
    <string name="facebook">FaeceBook</string>
    <string name="naver_blog">Naver Blog</string>
    <string name="tumblr">Tumblr</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_telephone">Phone</string>
    <string name="menu_emaile">Maile</string>
    <string name="company_map">EluoC&#38;C 본사</string>
    <string name="governor_kt_map">KT 관악지사</string>
    <string name="governor_map">Company Location</string>
    <string name="program_info">프로그램 정보</string>
    <string name="settings">설정</string>
    <string name="overlay">수신전화 알림</string>
    <string name="overlay_title">오버레이</string>
    <string name="push_title">푸쉬</string>
    <string name="push">푸쉬 알림 동의</string>

    <!-- 알림  -->
    <string name="D_TitleName">알림</string>
    <string name="D_Approval">확인</string>
    <string name="D_Canceled">취소</string>
    <string name="D_Question">종료 하시겠습니까?</string>
    <string name="D_Question_Meeting">원하시는 항목을 터치 해주세요</string>
    <string name="D_Approval_Meeting">예약 하기</string>
    <string name="D_Canceled_Meeting">예약 취소</string>
    <string name="D_View_again">다시 한번 조회 해주세요</string>
    <string name="D_aspiration_chip">유심을 확인 해주세요</string>
    <string name="D_account">인트라넷에 계정 정보와 일치 하지 않습니다\n인트라넷에 계정 정보를 확인 해주세요</string>
    <string name="D_meeting">7층 회의실 예약입니다</string>
    <string name="D_not_available">회의실 예약 할 수 없습니다</string>
    <string name="D_Update">최신 버전이 아닙니다.\n다운로드 페이지 이동 하시겠습니까?</string>

    <string name="T_meeting_name">회의실 예약 명을 입력 해주세요</string>
    <string name="T_meeting_booking">회의실 예약자 이름을 입력 해주세요</string>
    <string name="T_booking_warning">당일 하루에 대해서만 예약 가능합니다</string>
    <string name="T_booking_name_impossible">신청자 이름은 변경이 되지 않습니다</string>
    <string name="T_exit_meg">한번 더 누르시면 종료됩니다.</string>
    <string name="T_search_no">검색내용 입력 해주세요</string>
    <string name="T_search_no2">검색어를 2자 이상 입력해주세요</string>
    <string name="T_multi_windowMode">멀티 윈도우 사용시 원활하게 사용 할 수 없습니다.</string>
    <string name="T_app_permissions">앱 실행을 위해 전화 관리 권한을 설정해야 합니다.</string>
    <string name="T_meeting_4floor">4층 회의실 예약 현황 입니다</string>
    <string name="T_meeting_7floor">7층 회의실 예약 현황 입니다</string>
    <string name="T_meeting_8floor">8층 회의실 예약 현황 입니다</string>
    <string name="T_meeting_not">예약된 회의실이 없습니다</string>
    <string name="T_search_complete">검색이 완료 되었습니다</string>
    <string name="T_search_log">데이터 많은 경우 시간이 오래 걸립니다.</string>
    <string name="T_no_data">데이터가 없습니다.</string>

    <!-- 네트워크오류 문구 -->
    <string name="network_error">네트워크 오류</string>
    <string name="network_error_msg">네트워크 연결이 실패 하였습니다.\n확인 선택 시 어플리케이션이 종료됩니다.</string>
    <string name="network_error_chk">네트워크 상태를 확인해주세요</string>
    <string name="network_error_retry">다시 한번 시도 해주세요</string>

    <!-- 가타 -->
    <string name="voice_search_name">ELUO 음성 검색</string>
    <string name="search">검색</string>
    <string name="ok">확인</string>
    <string name="retry">다시시도</string>
    <string name="message">문자</string>
    <string name="telephone_connection">통화</string>
    <string name="employee_information">직원정보</string>
    <string name="available">예약 가능</string>
    <string name="not_available">예약 불가</string>
    <string name="com_mail">master@eluocnc.com</string>
    <string name="com_eluo">eluo</string>
    <string name="search_text">ID,전화,이름</string>
    <string name="appInfo">Ver: 1.7.10</string>
    <string name="view_more">[더 보기]</string>


    <!-- 메인 화면 -->
    <string name="main_notice">공지현황</string>
    <string name="main_leave">휴가현황</string>
    <string name="main_outside">외근현황</string>

    <!-- 정보 -->
    <string name="app_info_v">앱 정보 Alpha 1.7.10(Development Test Version)</string>

    <!-- 정보 표기 -->
    <string name="info_name">이름</string>
    <string name="info_dept">부서</string>
    <string name="info_telephone">전화</string>
    <string name="info_email">메일</string>
    <string name="info_img">이미지</string>
    <string name="info_data">데이터</string>
    <string name="info_date">날짜</string>
    <string name="info_text">텍스트</string>
    <string name="info_title">타이틀</string>
    <string name="info_head_office_7">7층 회의실</string>
    <string name="info_head_office_8">8층 회의실</string>
    <string name="info_office_expansion_4">4층 회의실</string>

</resources>
