<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/staff_mImage_item"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/info_img"
        android:gravity="left|top"
        android:src="@drawable/common_google_signin_btn_icon_light_pressed" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_weight="0.98">

        <TextView
            android:id="@+id/staff_name_itme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_name"
            android:textSize="9pt" />
        <TextView
            android:id="@+id/staff_dept_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dept"
            android:textSize="9pt" />
        <TextView
            android:id="@+id/staff_telephone_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_telephone"
            android:textSize="9pt" />

    </LinearLayout>

</LinearLayout>
