<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/mImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:layout_marginTop="2dp"
        android:src="@drawable/common_google_signin_btn_icon_dark_disabled"
        android:contentDescription="@string/info_img"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_date"
            android:textSize="9pt"
            />
        <TextView
            android:id="@+id/mText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:textSize="9pt"
            />

    </LinearLayout>

</LinearLayout>
