<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14.5dp"
        android:contentDescription="@string/action_home"
        app:srcCompat="@mipmap/h1_logo" />

    <TextView
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textColor="#777777"
        android:scaleType="center"
        android:text="@string/com_eluo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="8pt"
        android:textStyle="bold" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/textView"
        android:textColor="#8C8C8C"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="7.5pt"
        android:text="@string/com_mail"
        android:lineSpacingExtra="6dp" />

</LinearLayout>
